# option-research-platform

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-sidecar.txt  requirements.txt
backend/: __init__.py  main.py  sidecar.py  sidecar.spec
config/: providers.yaml  settings.yaml
database/: schema.sql
docker/: Dockerfile  docker-compose.yml
docs/: 00_Product_Requirements_Document.md  01_Software_Design_Specification.md  02_System_Architecture.md  03_Database_Design.md  04_Data_Providers.md  05_Backtesting_Engine.md  06_Execution_Model.md  07_Strategy_Framework.md  08_Optimization_Engine.md  09_Analytics.md  10_GUI_Design.md  14_Testing_Strategy.md  17_Deployment.md  19_Core_Engine_Architecture.md  20_Historical_Data_Engine.md  21_Database_Architecture.md  22_Pricing_Engine.md  23_Execution_Engine.md  24_Portfolio_Engine.md  25_Simulation_Engine.md  26_Historical_Data_Platform_Architecture.md  26_Volatility_Term_Structure_Engine.md  27_Greeks_Engine.md  28_Implied_Volatility_Engine.md  30_Backtesting_Engine.md  31_Execution_Model.md  32_Volatility_Engine.md  33_Greeks_Engine.md  34_Calendar_Research_Engine.md  34_Strategy_Framework.md  35_Strategy_Analytics.md  36_Research_Framework.md  38_GUI_Architecture.md  41_Risk_Engine.md  42_Portfolio_Engine.md  43_Earnings_Engine.md  43_Execution_Calibration_and_Broker_Policy.md  44_Reporting.md  45_Workspace.md  46_Configuration.md  (+78 more)
fastapi/: __init__.py  _compat.py  testclient.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
notebooks/: README.md
release/: config.json  (+4 more)
(+479 files in other folders)
