[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "option-research-platform"
version = "0.1.0"
description = "A research-first platform for quantitative options analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.10.0",
  "mypy>=1.12.0",
  "pytest>=8.4.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=4.0.0",
]

[tool.poetry]
name = "option-research-platform"
version = "0.1.0"
description = "A research-first platform for quantitative options analysis"
authors = ["Your Team <team@example.com>"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
numpy = ">=2.1.0"
pandas = ">=2.2.0"
scipy = ">=1.14.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"
black = ">=24.10.0"
mypy = ">=1.12.0"
pytest = ">=8.4.0"
pytest-cov = ">=5.0.0"
pre-commit = ">=4.0.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "backend/tests"]
